k8s/apps/myspeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myspeed
  labels:
    app: myspeed
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: myspeed
  template:
    metadata:
      labels:
        app: myspeed
    spec:
      nodeSelector:
        kubernetes.io/hostname: xgm-hm
      containers:
        - name: myspeed
          image: germannewsmaker/myspeed:1.0.9@sha256:3a3e774b3f78d930a5a962d625b99bcb3d71730bfeb4a6b93e04fd38cfe7d9a9
          ports:
            - containerPort: 5216
          resources:
            limits:
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /myspeed/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: myspeed-data
