k8s/apps/myspeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myspeed
spec:
  selector:
    app: myspeed
  ports:
    - port: 5216
      targetPort: 5216
