k8s/apps/myspeed/myspeed-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myspeed
spec:
  ingressClassName: traefik
  rules:
    - host: myspeed.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myspeed
                port:
                  number: 5216
